<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C4C4C"
    tools:context=".LogInActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/bander_logo"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_word"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/p_word"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/logInButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/createGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/createAccountButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createAccount"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />
        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>